backups/stpi-router.virtual-labs.ac.in/vz/private/12236/root/haneef/haneef_iptables.txt
# Generated by iptables-save v1.4.7 on Wed Apr  9 14:07:41 2014
*nat
:PREROUTING ACCEPT [132:10051]
:POSTROUTING ACCEPT [120:9232]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -d 196.12.53.133/32 -p tcp -m tcp --dport 22 -j DNAT --to-destination 10.4.12.169 
-A PREROUTING -d 196.12.53.135/32 -j DNAT --to-destination 10.4.12.156 
-A PREROUTING -d 196.12.53.132/32 -j DNAT --to-destination 10.4.12.165 
-A PREROUTING -d 196.12.53.131/32 -j DNAT --to-destination 10.4.12.201 
-A PREROUTING -d 196.12.53.130/32 -p tcp -m tcp --dport 3389 -j DNAT --to-destination 10.4.12.175 
-A PREROUTING -d 196.12.53.130/32 -p udp -m udp --dport 53 -j DNAT --to-destination 10.4.12.216 
-A PREROUTING -d 196.12.53.130/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 10.4.12.216 
-A PREROUTING -d 196.12.53.130/32 -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.4.12.159 
-A PREROUTING -d 196.12.53.130/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.4.12.159 
-A POSTROUTING -s 10.4.12.169/32 -p tcp -m tcp --dport 22 -j SNAT --to-source 196.12.53.133 
-A POSTROUTING -s 10.4.12.156/32 -j SNAT --to-source 196.12.53.135 
-A POSTROUTING -s 10.4.12.165/32 -j SNAT --to-source 196.12.53.132 
-A POSTROUTING -s 10.4.12.201/32 -j SNAT --to-source 196.12.53.131 
-A POSTROUTING -s 10.4.12.175/32 -p tcp -m tcp --dport 3389 -j SNAT --to-source 196.12.53.130 
-A POSTROUTING -d 10.4.12.216/32 -p tcp -m tcp --dport 53 -j SNAT --to-source 196.12.53.130 
-A POSTROUTING -d 10.4.12.216/32 -p udp -m udp --dport 53 -j SNAT --to-source 196.12.53.130 
-A POSTROUTING -s 10.4.12.159/32 -p tcp -m tcp --dport 80 -j SNAT --to-source 196.12.53.130 
-A POSTROUTING -s 10.4.12.159/32 -p tcp -m tcp --dport 443 -j SNAT --to-source 196.12.53.130 
COMMIT
# Completed on Wed Apr  9 14:07:41 2014
# Generated by iptables-save v1.4.7 on Wed Apr  9 14:07:41 2014
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -j ACCEPT 
-A FORWARD -j ACCEPT 
-A OUTPUT -j ACCEPT 
COMMIT
# Completed on Wed Apr  9 14:07:41 2014
